--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:theme="@style/Theme.Powerline"
         tools:targetApi="31">
         <activity
+            android:name=".ViewMessage"
+            android:exported="false"
+            android:label="@string/title_activity_new_message"
+            android:theme="@style/Theme.Powerline.NoActionBar" />
+        <activity
             android:name=".CreateAccountActivity"
             android:exported="false" />
         <activity
