--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Powerline"
         tools:targetApi="29">
+        <activity
+            android:name=".MessagesMenuV2"
+            android:exported="false"
+            android:label="@string/title_activity_messages_menu_v2"
+            android:theme="@style/Theme.Powerline" />
+
         <service
             android:name=".PushNotificationService"
             android:enabled="true"
@@ -26,9 +32,6 @@
 
         <activity
             android:name=".CreateContact"
-            android:exported="false" />
-        <activity
-            android:name=".activity_new_message"
             android:exported="false" />
         <activity
             android:name=".MessageThread"
@@ -65,6 +68,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
