--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
 
+    ext {
+        kotlin_version = '1.8.0'
+    }
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
     }
 
-    dependencies {
-        // Add the dependency for the Google services Gradle plugin
+    dependencies {// Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 plugins {
