--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging'
-
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation("androidx.datastore:datastore-preferences-rxjava3:1.0.0")
 
     // All the compose implementations
     implementation platform("androidx.compose:compose-bom:2023.04.01")
