--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,13 +58,15 @@ dependencies {
     implementation("androidx.datastore:datastore-preferences:1.0.0")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation("androidx.datastore:datastore-preferences-rxjava3:1.0.0")
-
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "androidx.compose.material:material-icons-extended:1.0.0-alpha08"
     // All the compose implementations
     implementation platform("androidx.compose:compose-bom:2023.04.01")
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
     testImplementation ("androidx.compose:compose-bom:2023.04.01")
     implementation("androidx.compose.material3:material3")
     implementation("androidx.compose.ui:ui-tooling-preview")
